--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Expert17 - Coming Soon</title>
-    <meta name="description"
-          content="Knight is a beautiful Bootstrap 4 template for product landing pages."/>
+    <meta name="description" content="Expert17 is coming soon."/>
 
     <!--Inter UI font-->
     <link href="https://rsms.me/inter/inter-ui.css" rel="stylesheet">
