--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Expert17 - Coming Soon</title>
+    <title>Expert17 - Coming Soon!</title>
     <meta name="description" content="Expert17 is coming soon."/>
 
     <!--Inter UI font-->
