--- a/index.html
+++ b/index.html
@@ -17,16 +17,18 @@
       <!-- Navbar -->
       <div class="navigation container-fluid">
          <div class="row justify-content-md-center ">
-            <div class="col-md-6 col-sm-12">
+            <div class="col-md-3 col-sm-12">
                <nav class="navbar navbar-default">
                   <a class="navbar-brand" href="index.html">
                   <img src="img/Expert-white.svg" width="300px" alt="Logo">
                   </a>
+                  <div class="col-md-6 col-sm-12">
                   <div class="button_container" id="toggle">
                      <span class="top"></span>
                      <span class="middle"></span>
                      <span class="bottom"></span>
                   </div>
+               </div>
                   <div class="overlay" id="overlay">
                      <nav class="overlay-menu">
                         <ul>
@@ -59,11 +61,11 @@
                   <div class="card-columns">
                      <div class="card card-hover h-100" >
                         <div class="card-body">
-                           <a href="index.html">
-                              <img class="card-img-top" src="img/photo-1.jpg" alt="Card image cap">
+                           <a href="img/Shoprite promo.mp4">
+                              <img class="card-img-top" src="img/Shoprite promo.jpg" alt="Card image cap">
                               <div class="reveal h-100 p-2 d-flex ">
                                  <div class="w-100 align-self-center">
-                                    <p> Curabitur non nulla</p>
+                                    <p> Shoprite promo</p>
                                  </div>
                               </div>
                            </a>
@@ -72,10 +74,10 @@
                      <div class="card card-hover h-100" >
                         <div class="card-body">
                            <a href="index.html">
-                              <img class="card-img-top" src="img/photo-2.jpg" alt="Card image cap">
+                              <img class="card-img-top" src="img/Megan Gallie.png" alt="Card image cap">
                               <div class="reveal h-100 p-2 d-flex ">
                                  <div class="w-100 align-self-center">
-                                    <p>Vivamus magna convallis</p>
+                                    <p>K'nect influencer promo</p>
                                  </div>
                               </div>
                            </a>
@@ -84,10 +86,10 @@
                      <div class="card card-hover h-100">
                         <div class="card-body">
                            <a href="index.html">
-                              <img class="card-img-top" src="img/photo-3.jpg" alt="Card image cap">
+                              <img class="card-img-top" src="img/Somesay.png" alt="Card image cap">
                               <div class="reveal h-100 p-2 d-flex ">
                                  <div class="w-100 align-self-center">
-                                    <p>Lacinia eget consectetur</p>
+                                    <p>Bernini influencer promo</p>
                                  </div>
                               </div>
                            </a>
@@ -96,10 +98,10 @@
                      <div class="card card-hover h-100">
                         <div class="card-body">
                            <a href="index.html">
-                              <img class="card-img-top" src="img/photo-4.jpg" alt="Card image cap">
+                              <img class="card-img-top" src="img/Tumi knect.png" alt="Card image cap">
                               <div class="reveal h-100 p-2 d-flex ">
                                  <div class="w-100 align-self-center">
-                                    <p>Convallis a pellentesque</p>
+                                    <p>K'nect influencer promo</p>
                                  </div>
                               </div>
                            </a>
@@ -108,10 +110,10 @@
                      <div class="card card-hover h-100">
                         <div class="card-body">
                            <a href="index.html">
-                              <img class="card-img-top" src="img/photo-5.jpg" alt="Card image cap">
+                              <img class="card-img-top" src="img/Acwengile.png" alt="Card image cap">
                               <div class="reveal h-100 p-2 d-flex ">
                                  <div class="w-100 align-self-center">
-                                    <p>Egestas non nisi</p>
+                                    <p>Bernini influencer promo</p>
                                  </div>
                               </div>
                            </a>
@@ -119,11 +121,11 @@
                      </div>
                      <div class="card card-hover h-100">
                         <div class="card-body">
-                           <a href="index.html">
-                              <img class="card-img-top" src="img/photo-6.jpg" alt="Card image cap">
+                           <a href="img/Sobekwa Twins.mp4">
+                              <img class="card-img-top" src="img/Sobekwa twins.jpg" alt="Card image cap">
                               <div class="reveal h-100 p-2 d-flex ">
                                  <div class="w-100 align-self-center">
-                                    <p>Vivamus magna convallis</p>
+                                    <p>K'nect influencer promo</p>
                                  </div>
                               </div>
                            </a>
@@ -131,17 +133,17 @@
                      </div>
                      <div class="card card-hover h-100">
                         <div class="card-body">
-                           <a href="index.html">
-                              <img class="card-img-top" src="img/photo-7.jpg" alt="Card image cap">
+                           <a href="img/Bernini promo.mp4">
+                              <img class="card-img-top" src="img/Bernini.jpg" alt="Card image cap">
                               <div class="reveal h-100 p-2 d-flex ">
                                  <div class="w-100 align-self-center">
-                                    <p>Eget malesuada lacinia</p>
+                                    <p>Bernini influencer promo</p>
                                  </div>
                               </div>
                            </a>
                         </div>
                      </div>
-                     <div class="card card-hover h-100">
+                     <!-- <div class="card card-hover h-100">
                         <div class="card-body">
                            <a href="index.html">
                               <img class="card-img-top" src="img/photo-8.jpg" alt="Card image cap">
@@ -152,8 +154,8 @@
                               </div>
                            </a>
                         </div>
-                     </div>
-                     <div class="card card-hover h-100">
+                     </div> -->
+                     <!-- <div class="card card-hover h-100">
                         <div class="card-body">
                            <a href="index.html">
                               <img class="card-img-top" src="img/photo-9.jpg" alt="Card image cap">
@@ -164,7 +166,7 @@
                               </div>
                            </a>
                         </div>
-                     </div>
+                     </div> -->
                   </div>
                </div>
             </div>
