--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <link href="vendor/animate/animate.css" rel="stylesheet" type="text/css"/>
       <link href="css/style.css" rel="stylesheet" type="text/css"/>
       <link href="css/cards.css" rel="stylesheet" type="text/css"/>
+      <link href="css/carousel.css" rel="stylesheet" type="text/css"/>
    </head>
    <body>
       <!-- Navbar -->
@@ -184,6 +185,18 @@
          <span class="close">&times;</span>
          <img class="modal-content" id="modalImage">
        </div>
+
+       <center>
+         <div class="carousel">
+            <div class="carousel-track">
+               <img src="img/Stella.jpeg" alt="Logo 1" class="carousel-logo">
+               <img src="img/puma.jpeg" alt="Logo 2" class="carousel-logo">
+               <img src="img/black label.png" alt="Logo 3" class="carousel-logo">
+               <img src="img/flying fish.png" alt="Logo 4" class="carousel-logo">
+               <!-- Add more logos as needed -->
+            </div>
+         </div>
+      </center>
 
       <!-- End Gallery -->
       <!-- Footer -->
