--- a/index.html
+++ b/index.html
@@ -185,6 +185,7 @@
        </div>
 
        <center>
+         <h2 class="pb-5 pt-5" style="color: white;">Some of our clients</h2>
          <div class="carousel">
             <div class="carousel-track">
                <img src="img/Stella.jpeg" alt="Logo 1" class="carousel-logo">
