--- a/index.html
+++ b/index.html
@@ -185,6 +185,14 @@
        </div>
 
        <center>
+       <div class="container align-items-center">
+         <div class="ratio ratio-16x9">
+            <iframe width="100%" height="400" src="https://www.youtube.com/embed/-13gOexWbvw?si=XCn1vpnkOpKyPC--" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+       </div>
+       </div>
+       </center>
+
+       <center>
          <h2 class="pb-5 pt-5" style="color: white;">Some of our clients</h2>
          <div class="carousel">
             <div class="carousel-track">
