--- a/contacts.html
+++ b/contacts.html
@@ -63,11 +63,21 @@
          </div>
       </div>
       <!-- End Contact -->
+      <center>
+         <div class="container align-items-center">
+            <img src="img/contact.gif" class="img-fluid" alt="Contact Image">
+           <!-- <div class="ratio ratio-16x9">
+              <iframe width="100%" height="500" src="img/contact.mp4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+         </div> -->
+         </div>
+         </center>
       <!-- Contact Form -->
       <div class="container-fluid contact-form">
          <div class="row">
             <div class="col-md-10 offset-md-1">
                <div class="row">
+
+                  
                   <!-- <div class="col-xl-6 col-md-11 col-sm-12 pb-5">
                      <p class="pb-5">
                         Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus.
@@ -75,7 +85,7 @@
                         <br> Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Sed porttitor lectus nibh. Pellentesque in ipsum id orci porta dapibus.
                      </p>
                   </div> -->
-                  <div class="col-xl-12 offset-xl-1 col-md-12 col-sm-12">
+                  <!-- <div class="col-xl-12 offset-xl-1 col-md-12 col-sm-12">
                      <form>
                         <div class="row">
                            <div class="col-md-12">
@@ -100,7 +110,7 @@
                         </div>
                         <button type="submit" class="btn btn-primary btn-md">Send</button>
                      </form>
-                  </div>
+                  </div> -->
                </div>
             </div>
          </div>
