--- a/index.html
+++ b/index.html
@@ -196,10 +196,15 @@
          <h2 class="pb-5 pt-5" style="color: white;">Some of our clients</h2>
          <div class="carousel">
             <div class="carousel-track">
-               <img src="img/Stella.jpeg" alt="Logo 1" class="carousel-logo">
-               <img src="img/puma.jpeg" alt="Logo 2" class="carousel-logo">
-               <img src="img/black label.png" alt="Logo 3" class="carousel-logo">
-               <img src="img/flying fish.png" alt="Logo 4" class="carousel-logo">
+               <img src="img/Stella.jpeg" alt="Stella Artois" class="carousel-logo">
+               <img src="img/Puma.png" alt="Puma" class="carousel-logo">
+               <img src="img/black label.png" alt="Black label" class="carousel-logo">
+               <img src="img/Markham.webp" alt="Markham" class="carousel-logo">
+               <img src="img/flying fish.png" alt="Flying fish" class="carousel-logo">
+               <img src="img/Castle Lite.jpeg" alt="Castle Lite" class="carousel-logo">
+               <img src="img/Kia.png" alt="Kia" class="carousel-logo">
+               <img src="img/Corona.png" alt="Corona" class="carousel-logo">
+               <img src="img/Black Crown.svg" alt="Black crown" class="carousel-logo">
                <!-- Add more logos as needed -->
             </div>
          </div>
