--- a/index.html
+++ b/index.html
@@ -205,6 +205,12 @@
                <img src="img/Kia.png" alt="Kia" class="carousel-logo">
                <img src="img/Corona.png" alt="Corona" class="carousel-logo">
                <img src="img/Black Crown.svg" alt="Black crown" class="carousel-logo">
+               <img src="img/Brutal fruit.png" alt="Brutal fruit" class="carousel-logo">
+               <img src="img/Smirnoff.png" alt="Smirnoff" class="carousel-logo">
+               <img src="img/Budweiser.png" alt="Budweiser" class="carousel-logo">
+               <img src="img/Klipdrift.png" alt="Klipdrift" class="carousel-logo">
+               <img src="img/Extreme.png" alt="Extreme" class="carousel-logo">
+               <img src="img/Bernini logo.png" alt="Bernini" class="carousel-logo">
                <!-- Add more logos as needed -->
             </div>
          </div>
