--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
       <title>Home | expert17</title>
       <meta charset="UTF-8">
       <meta name="description" content="expert17, Progressive digital solutions">
-      <meta name="keywords" content="pogressive digital solutions, influencer marketing, content production, influencer management, brand consultancy, campaign monitoring, events management, marketing strategies">
+      <meta name="keywords" content="progressive digital solutions, influencer marketing, content production, influencer management, brand consultancy, campaign monitoring, events management, marketing strategies">
       <meta name="author" content="expert17">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <!-- Styles -->
       <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
       <link href="vendor/animate/animate.css" rel="stylesheet" type="text/css"/>
       <link href="css/style.css" rel="stylesheet" type="text/css"/>
-      <link href="css/cards.css" rel="stylesheet" type="text/css"/>
+      <!-- <link href="css/cards.css" rel="stylesheet" type="text/css"/> -->
       <link href="css/carousel.css" rel="stylesheet" type="text/css"/>
+      <link href="css/new-cards.css" rel="stylesheet" type="text/css"/>
    </head>
    <body>
       <!-- Navbar -->
@@ -47,109 +48,141 @@
       <!-- Portfolio-Text -->
       <div class="container-fluid pb-5 portfolio-text">
          <center>
-               <p class="pb-5 pt-5" style="color: white;">
+               <h2 class="pb-5 pt-5 wow fadeInUp" style="color: white;">
                   PROGRESSIVE DIGITAL SOLUTIONS
-               </p>
+               </h2>
+
+                 <p class="pb-5 pt-5 wow fadeInUp" data-wow-delay="0.2s" style="color: white;">
+                  "a person who is very knowledgeable about or skillful in a particular area."
+                 </p>
             </center>
       </div>
-      <!-- End Portfolio-Text -->
-      <!-- Gallery -->
-      <!-- <div class="scrollblock">
-         <div class="container-fluid pt-10">
-            <div class="row justify-content-md-center ">
-               <div class="col-md-10 col-sm-12">
-                  <div class="card-columns">
-                     <div class="card card-hover h-100" >
-                        <div class="card-body">
-                           <a href="img/Shoprite promo.mp4">
-                              <img class="card-img-top" src="img/Shoprite promo.jpg" alt="Card image cap">
-                              <div class="reveal h-100 p-2 d-flex ">
-                                 <div class="w-100 align-self-center">
-                                    <p> Shoprite promo</p>
-                                 </div>
-                              </div>
-                           </a>
-                        </div>
-                     </div>
-                     <div class="card card-hover h-100" >
-                        <div class="card-body">
-                           <a href="index.html">
-                              <img class="card-img-top" src="img/Megan Gallie.png" alt="Card image cap">
-                              <div class="reveal h-100 p-2 d-flex ">
-                                 <div class="w-100 align-self-center">
-                                    <p>K'nect influencer promo</p>
-                                 </div>
-                              </div>
-                           </a>
-                        </div>
-                     </div>
-                     <div class="card card-hover h-100">
-                        <div class="card-body">
-                           <a href="index.html">
-                              <img class="card-img-top" src="img/Somesay.png" alt="Card image cap">
-                              <div class="reveal h-100 p-2 d-flex ">
-                                 <div class="w-100 align-self-center">
-                                    <p>Bernini influencer promo</p>
-                                 </div>
-                              </div>
-                           </a>
-                        </div>
-                     </div>
-                     <div class="card card-hover h-100">
-                        <div class="card-body">
-                           <a href="index.html">
-                              <img class="card-img-top" src="img/Tumi knect.png" alt="Card image cap">
-                              <div class="reveal h-100 p-2 d-flex ">
-                                 <div class="w-100 align-self-center">
-                                    <p>K'nect influencer promo</p>
-                                 </div>
-                              </div>
-                           </a>
-                        </div>
-                     </div>
-                     <div class="card card-hover h-100">
-                        <div class="card-body">
-                           <a href="index.html">
-                              <img class="card-img-top" src="img/Acwengile.png" alt="Card image cap">
-                              <div class="reveal h-100 p-2 d-flex ">
-                                 <div class="w-100 align-self-center">
-                                    <p>Bernini influencer promo</p>
-                                 </div>
-                              </div>
-                           </a>
-                        </div>
-                     </div>
-                     <div class="card card-hover h-100">
-                        <div class="card-body">
-                           <a href="img/Sobekwa Twins.mp4">
-                              <img class="card-img-top" src="img/Sobekwa twins.jpg" alt="Card image cap">
-                              <div class="reveal h-100 p-2 d-flex ">
-                                 <div class="w-100 align-self-center">
-                                    <p>K'nect influencer promo</p>
-                                 </div>
-                              </div>
-                           </a>
-                        </div>
-                     </div>
-                     <div class="card card-hover h-100">
-                        <div class="card-body">
-                           <a href="img/Bernini promo.mp4">
-                              <img class="card-img-top" src="img/Bernini.jpg" alt="Card image cap">
-                              <div class="reveal h-100 p-2 d-flex ">
-                                 <div class="w-100 align-self-center">
-                                    <p>Bernini influencer promo</p>
-                                 </div>
-                              </div>
-                           </a>
-                        </div>
-                     </div>
-                  </div>
-               </div>
-            </div>
-         </div>
-      </div> -->
+      
+      <!-- <section class="video-background" >
+          <video autoplay muted loop playsinline>
+               <iframe src="https://youtu.be/k-IIGA93QCI?si=bYeiLT_5aIZ4rlFq" type="video/mp4"></iframe>
+          </video>
+      </section> -->
 
-      <section class="card-grid">
+       <section class="video-section">
+            <!-- <div class="video-background">
+               <source src="img/Spree Style Network.mp4" frameborder="0" allow="autoplay; fullscreen" allowfullscreen>
+            </div> -->
+              <video autoplay muted loop playsinline>
+                  <source src="img/Spree Style Network.mp4" type="video/mp4">
+               </video>
+       </section>
+
+       <!-- Cards Section -->
+  <section class="card-section">
+    <!-- Row 1 -->
+    <div class="card-row">
+      <div class="card wow fadeInLeft" data-wow-delay="0.1s">
+         <div>
+            <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-globe2" viewBox="0 0 16 16">
+               <path d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m7.5-6.923c-.67.204-1.335.82-1.887 1.855q-.215.403-.395.872c.705.157 1.472.257 2.282.287zM4.249 3.539q.214-.577.481-1.078a7 7 0 0 1 .597-.933A7 7 0 0 0 3.051 3.05q.544.277 1.198.49zM3.509 7.5c.036-1.07.188-2.087.436-3.008a9 9 0 0 1-1.565-.667A6.96 6.96 0 0 0 1.018 7.5zm1.4-2.741a12.3 12.3 0 0 0-.4 2.741H7.5V5.091c-.91-.03-1.783-.145-2.591-.332M8.5 5.09V7.5h2.99a12.3 12.3 0 0 0-.399-2.741c-.808.187-1.681.301-2.591.332zM4.51 8.5c.035.987.176 1.914.399 2.741A13.6 13.6 0 0 1 7.5 10.91V8.5zm3.99 0v2.409c.91.03 1.783.145 2.591.332.223-.827.364-1.754.4-2.741zm-3.282 3.696q.18.469.395.872c.552 1.035 1.218 1.65 1.887 1.855V11.91c-.81.03-1.577.13-2.282.287zm.11 2.276a7 7 0 0 1-.598-.933 9 9 0 0 1-.481-1.079 8.4 8.4 0 0 0-1.198.49 7 7 0 0 0 2.276 1.522zm-1.383-2.964A13.4 13.4 0 0 1 3.508 8.5h-2.49a6.96 6.96 0 0 0 1.362 3.675c.47-.258.995-.482 1.565-.667m6.728 2.964a7 7 0 0 0 2.275-1.521 8.4 8.4 0 0 0-1.197-.49 9 9 0 0 1-.481 1.078 7 7 0 0 1-.597.933M8.5 11.909v3.014c.67-.204 1.335-.82 1.887-1.855q.216-.403.395-.872A12.6 12.6 0 0 0 8.5 11.91zm3.555-.401c.57.185 1.095.409 1.565.667A6.96 6.96 0 0 0 14.982 8.5h-2.49a13.4 13.4 0 0 1-.437 3.008M14.982 7.5a6.96 6.96 0 0 0-1.362-3.675c-.47.258-.995.482-1.565.667.248.92.4 1.938.437 3.008zM11.27 2.461q.266.502.482 1.078a8.4 8.4 0 0 0 1.196-.49 7 7 0 0 0-2.275-1.52c.218.283.418.597.597.932m-.488 1.343a8 8 0 0 0-.395-.872C9.835 1.897 9.17 1.282 8.5 1.077V4.09c.81-.03 1.577-.13 2.282-.287z"/>
+               </svg>
+               <br/><br/>
+            <h3>Concept Development &amp; Excecution</h3>
+            <br/><br/>
+         </div>
+      </div>
+      <div class="card wow fadeInLeft" data-wow-delay="0.1s">
+          <div>
+            <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-camera-reels" viewBox="0 0 16 16">
+               <path d="M6 3a3 3 0 1 1-6 0 3 3 0 0 1 6 0M1 3a2 2 0 1 0 4 0 2 2 0 0 0-4 0"/>
+               <path d="M9 6h.5a2 2 0 0 1 1.983 1.738l3.11-1.382A1 1 0 0 1 16 7.269v7.462a1 1 0 0 1-1.406.913l-3.111-1.382A2 2 0 0 1 9.5 16H2a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2zm6 8.73V7.27l-3.5 1.555v4.35zM1 8v6a1 1 0 0 0 1 1h7.5a1 1 0 0 0 1-1V8a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1"/>
+               <path d="M9 6a3 3 0 1 0 0-6 3 3 0 0 0 0 6M7 3a2 2 0 1 1 4 0 2 2 0 0 1-4 0"/>
+               </svg>
+               <br/><br/>
+            <h3>Content Production</h3>
+            <br/><br/>
+         </div>
+      </div>
+      <div class="card wow fadeInLeft" data-wow-delay="0.4s">
+         <div>
+            <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-file-earmark-richtext" viewBox="0 0 16 16">
+               <path d="M14 4.5V14a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h5.5zm-3 0A1.5 1.5 0 0 1 9.5 3V1H4a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V4.5z"/>
+               <path d="M4.5 12.5A.5.5 0 0 1 5 12h3a.5.5 0 0 1 0 1H5a.5.5 0 0 1-.5-.5m0-2A.5.5 0 0 1 5 10h6a.5.5 0 0 1 0 1H5a.5.5 0 0 1-.5-.5m1.639-3.708 1.33.886 1.854-1.855a.25.25 0 0 1 .289-.047l1.888.974V8.5a.5.5 0 0 1-.5.5H5a.5.5 0 0 1-.5-.5V8s1.54-1.274 1.639-1.208M6.25 6a.75.75 0 1 0 0-1.5.75.75 0 0 0 0 1.5"/>
+               </svg>
+               <br/><br/>
+            <h3>PR &amp; Marketing Strategies</h3>
+            <br/><br/>
+         </div>
+      </div>
+    </div>
+    <!-- Row 2 -->
+    <div class="card-row">
+      <div class="card wow fadeInLeft" data-wow-delay="0.1s">
+         <div>
+            <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-people" viewBox="0 0 16 16">
+               <path d="M15 14s1 0 1-1-1-4-5-4-5 3-5 4 1 1 1 1zm-7.978-1L7 12.996c.001-.264.167-1.03.76-1.72C8.312 10.629 9.282 10 11 10c1.717 0 2.687.63 3.24 1.276.593.69.758 1.457.76 1.72l-.008.002-.014.002zM11 7a2 2 0 1 0 0-4 2 2 0 0 0 0 4m3-2a3 3 0 1 1-6 0 3 3 0 0 1 6 0M6.936 9.28a6 6 0 0 0-1.23-.247A7 7 0 0 0 5 9c-4 0-5 3-5 4q0 1 1 1h4.216A2.24 2.24 0 0 1 5 13c0-1.01.377-2.042 1.09-2.904.243-.294.526-.569.846-.816M4.92 10A5.5 5.5 0 0 0 4 13H1c0-.26.164-1.03.76-1.724.545-.636 1.492-1.256 3.16-1.275ZM1.5 5.5a3 3 0 1 1 6 0 3 3 0 0 1-6 0m3-2a2 2 0 1 0 0 4 2 2 0 0 0 0-4"/>
+               </svg>
+               <br/><br/>
+            <h3>Inluencer Marketing</h3>
+            <br/><br/>
+         </div>
+      </div>
+      <div class="card wow fadeInLeft" data-wow-delay="0.2s">
+          <div>
+            <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-person-bounding-box" viewBox="0 0 16 16">
+               <path d="M1.5 1a.5.5 0 0 0-.5.5v3a.5.5 0 0 1-1 0v-3A1.5 1.5 0 0 1 1.5 0h3a.5.5 0 0 1 0 1zM11 .5a.5.5 0 0 1 .5-.5h3A1.5 1.5 0 0 1 16 1.5v3a.5.5 0 0 1-1 0v-3a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 1-.5-.5M.5 11a.5.5 0 0 1 .5.5v3a.5.5 0 0 0 .5.5h3a.5.5 0 0 1 0 1h-3A1.5 1.5 0 0 1 0 14.5v-3a.5.5 0 0 1 .5-.5m15 0a.5.5 0 0 1 .5.5v3a1.5 1.5 0 0 1-1.5 1.5h-3a.5.5 0 0 1 0-1h3a.5.5 0 0 0 .5-.5v-3a.5.5 0 0 1 .5-.5"/>
+               <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zm8-9a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
+               </svg>
+               <br/><br/>
+            <h3>Influencer Management</h3>
+            <br/><br/>
+         </div>
+      </div>
+      <div class="card wow fadeInLeft" data-wow-delay="0.4s">
+         <div>
+            <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-graph-up-arrow" viewBox="0 0 16 16">
+               <path fill-rule="evenodd" d="M0 0h1v15h15v1H0zm10 3.5a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 .5.5v4a.5.5 0 0 1-1 0V4.9l-3.613 4.417a.5.5 0 0 1-.74.037L7.06 6.767l-3.656 5.027a.5.5 0 0 1-.808-.588l4-5.5a.5.5 0 0 1 .758-.06l2.609 2.61L13.445 4H10.5a.5.5 0 0 1-.5-.5"/>
+               </svg>
+               <br/><br/>
+            <h3>Brand Consultancy</h3>
+            <br/><br/>
+         </div>
+      </div>
+    </div>
+    <!-- Row 3 -->
+    <div class="card-row">
+      <div class="card wow fadeInLeft" data-wow-delay="0.1s">
+          <div>
+            <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-file-bar-graph" viewBox="0 0 16 16">
+               <path d="M4.5 12a.5.5 0 0 1-.5-.5v-2a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-.5.5zm3 0a.5.5 0 0 1-.5-.5v-4a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v4a.5.5 0 0 1-.5.5zm3 0a.5.5 0 0 1-.5-.5v-6a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-.5.5z"/>
+               <path d="M4 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm0 1h8a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1"/>
+               </svg>
+               <br/><br/>
+            <h3>Campaign Monitoring &amp; Reporting</h3>
+            <br/><br/>
+         </div>
+      </div>
+      <div class="card wow fadeInLeft" data-wow-delay="0.2s">
+           <div>
+               <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-twitter-x" viewBox="0 0 16 16">
+                  <path d="M12.6.75h2.454l-5.36 6.142L16 15.25h-4.937l-3.867-5.07-4.425 5.07H.316l5.733-6.57L0 .75h5.063l3.495 4.633L12.601.75Zm-.86 13.028h1.36L4.323 2.145H2.865z"/>
+                  </svg>
+                  <br/><br/>
+               <h3>Twitter &amp; Instagram Army Promotions</h3>
+               <br/><br/>
+            </div>
+      </div>
+      <div class="card wow fadeInLeft" data-wow-delay="0.4s">
+           <div>
+            <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-calendar-week" viewBox="0 0 16 16">
+               <path d="M11 6.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5zm-3 0a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5zm-5 3a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5zm3 0a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5z"/>
+               <path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5M1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4z"/>
+               </svg>
+               <br/><br/>
+            <h3>Events Management</h3>
+            <br/><br/>
+         </div>
+      </div>
+    </div>
+  </section>
+
+      <!-- <section class="card-grid">
          <div class="card">
            <img src="img/Acwengile.png" alt="Content Creation"  class="card-img" onclick="openModal(this)">
            <h3>Content Creation</h3>
@@ -162,9 +195,9 @@
            <img src="img/Somesay.png" alt="Video Production"  class="card-img" onclick="openModal(this)">
            <h3>Video Production</h3>
          </div>
-       </section>
+       </section> -->
 
-       <section class="card-grid">
+       <!-- <section class="card-grid">
          <div class="card">
            <img src="img/Bernini.jpg" alt="Content Creation"  class="card-img" onclick="openModal(this)">
            <h3>Content Creation</h3>
@@ -177,20 +210,20 @@
            <img src="img/Sobekwa twins.jpg" alt="Video Production"  class="card-img" onclick="openModal(this)">
            <h3>Video Production</h3>
          </div>
-       </section>
+       </section> -->
 
-       <div id="imageModal" class="modal" onclick="closeModal()">
+       <!-- <div id="imageModal" class="modal" onclick="closeModal()">
          <span class="close">&times;</span>
          <img class="modal-content" id="modalImage">
-       </div>
+       </div> -->
 
-       <center>
+       <!-- <center>
        <div class="container align-items-center">
          <div class="ratio ratio-16x9">
             <iframe width="100%" height="400" src="https://www.youtube.com/embed/-13gOexWbvw?si=XCn1vpnkOpKyPC--" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
        </div>
        </div>
-       </center>
+       </center> -->
 
        <center>
          <h2 class="pb-5 pt-5" style="color: white;">Some of our clients</h2>
