--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
                   <div class="overlay" id="overlay">
                      <nav class="overlay-menu">
                         <ul>
-                           <li> <a href="about.html">About</a></li>
+                           <li> <a href="#about">About</a></li>
                            <!-- <li> <a href="story.html">Story</a></li> -->
-                           <li> <a href="services.html">Services</a></li>
-                           <li> <a href="contacts.html">Contacts</a></li>
+                           <li> <a href="#services">Services</a></li>
+                           <li> <a href="#contact">Contacts</a></li>
                         </ul>
                      </nav>
                   </div>
@@ -74,7 +74,7 @@
        </section>
 
        <!-- Cards Section -->
-  <section class="card-section">
+  <section class="card-section" id="services">
     <!-- Row 1 -->
     <div class="card-row">
       <div class="card wow fadeInLeft" data-wow-delay="0.1s">
