--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
       <!-- <link href="css/cards.css" rel="stylesheet" type="text/css"/> -->
       <link href="css/carousel.css" rel="stylesheet" type="text/css"/>
       <link href="css/new-cards.css" rel="stylesheet" type="text/css"/>
+
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
    </head>
    <body>
       <!-- Navbar -->
@@ -48,11 +52,11 @@
       <!-- Portfolio-Text -->
       <div class="container-fluid pb-5 portfolio-text">
          <center>
-               <h1 class="pb-5 pt-5 wow fadeInUp" style="color: white;">
+               <h1 class="pb-5 pt-5 wow fadeInUp audiowide-regular" style="color: white;">
                   PROGRESSIVE DIGITAL SOLUTIONS
                </h1>
 
-                 <p class="pb-5 pt-5 wow fadeInUp" data-wow-delay="0.2s" style="color: white;">
+                 <p class="pb-5 pt-5 wow fadeInUp audiowide-regular" data-wow-delay="0.2s" style="color: white;">
                   "a person who is very knowledgeable about or skillful in a particular area."
                  </p>
             </center>
@@ -248,6 +252,21 @@
             </div>
          </div>
       </center>
+
+      <section>
+         <div class="container">
+         <div class="row">
+            <div class="col-md-6">
+               <h2 class="pb-5 pt-5" style="color: white;">Contact us</h2>
+               <p style="color: white;">For inquiries, please contact us at:</p>
+         </div>
+            <div class="col-md-6">
+              <button class="btn btn-primary" style="background-color: #f8f9fa; color: black; border: none; padding: 10px 20px; font-size: 16px;">
+                  <a href="mailto:info@expert17.co"></a>
+            </div>
+         </div>
+         </div>
+      </section>
 
       <!-- End Gallery -->
       <!-- Footer -->
