--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
          </div>
       </center>
 
-      <section>
+      <!-- <section>
          <div class="container">
          <div class="row">
             <div class="col-md-6">
@@ -266,7 +266,7 @@
             </div>
          </div>
          </div>
-      </section>
+      </section> -->
 
       <!-- End Gallery -->
       <!-- Footer -->
