--- a/index.html
+++ b/index.html
@@ -61,20 +61,21 @@
                  </p>
             </center>
       </div>
-      
-      <!-- <section class="video-background" >
-          <video autoplay muted loop playsinline>
-               <iframe src="https://youtu.be/k-IIGA93QCI?si=bYeiLT_5aIZ4rlFq" type="video/mp4"></iframe>
-          </video>
-      </section> -->
+   
 
        <section class="video-section">
-            <!-- <div class="video-background">
-               <source src="img/Spree Style Network.mp4" frameborder="0" allow="autoplay; fullscreen" allowfullscreen>
-            </div> -->
               <video autoplay muted loop playsinline>
                   <source src="img/Spree Style Network.mp4" type="video/mp4">
                </video>
+               <!-- <div class="video-content">
+               <h1 class="pb-5 pt-5 wow fadeInUp audiowide-regular" data-wow-delay="0.1s">
+                  PROGRESSIVE DIGITAL SOLUTIONS
+               </h1>
+
+                 <p class="pb-5 pt-5 wow fadeInUp audiowide-regular" data-wow-delay="0.2s">
+                  "a person who is very knowledgeable about or skillful in a particular area."
+                 </p>
+               </div> -->
        </section>
 
        <!-- Cards Section -->
@@ -230,8 +231,8 @@
        </center> -->
 
        <center>
-         <h2 class="pb-5 pt-5" style="color: white;">Some of our clients</h2>
-         <div class="carousel">
+         <h2 class="pb-5 pt-5 wow fadeInUp" data-wow-delay="0.2s" style="color: white;">Some of our clients</h2>
+         <div class="carousel wow fadeInUp" data-wow-delay="0.2s">
             <div class="carousel-track">
                <img src="img/Stella.jpeg" alt="Stella Artois" class="carousel-logo">
                <img src="img/Puma.png" alt="Puma" class="carousel-logo">
