--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 
        <center>
          <h2 class="pb-5 pt-5 wow fadeInUp" data-wow-delay="0.2s" style="color: white;">Some of our clients</h2>
-         <div class="carousel wow fadeInUp" data-wow-delay="0.2s">
+         <div class="carousel wow fadeInUp py-5" data-wow-delay="0.2s">
             <div class="carousel-track">
                <img src="img/Stella.jpeg" alt="Stella Artois" class="carousel-logo">
                <img src="img/Puma.png" alt="Puma" class="carousel-logo">
@@ -254,20 +254,17 @@
          </div>
       </center>
 
-      <!-- <section>
+      <section class="pt-5 py-5 wow fadeInUp" data-wow-delay="0.2s" style="background-color: white;">
          <div class="container">
-         <div class="row">
-            <div class="col-md-6">
-               <h2 class="pb-5 pt-5" style="color: white;">Contact us</h2>
-               <p style="color: white;">For inquiries, please contact us at:</p>
-         </div>
-            <div class="col-md-6">
-              <button class="btn btn-primary" style="background-color: #f8f9fa; color: black; border: none; padding: 10px 20px; font-size: 16px;">
-                  <a href="mailto:info@expert17.co"></a>
-            </div>
+         <div class="row align-items-center justify-content-center">
+            <div class="col" style="text-align: center;">
+               <h2 class="pb-3 pt-3" style="color: black;">Get in touch</h2>
+               <p class="py-5" style="color: black;">Need to get in touch with us? Hit the contact us button</p>
+               <button class="glass-button" onclick="location.href='mailto:info@expert17.co'">Contact Us</button>
          </div>
          </div>
-      </section> -->
+         </div>
+      </section>
 
       <!-- End Gallery -->
       <!-- Footer -->
@@ -275,10 +272,10 @@
          <div class="row">
             <div class="col-xl-2 col-md-8 offset-md-1 col-sm-12 " style="color: white;">
                <p>
-                  <a href="about.html" style="color: white;">About</a><br>
+                  <a href="#about" style="color: white;">About</a><br>
                   <!-- <a href="story.html">Story</a><br> -->
-                  <a href="services.html" style="color: white;">Services</a><br>
-                  <a href="contacts.html" style="color: white;">Contacts</a><br>
+                  <a href="#services" class="wow fadeInUp" style="color: white;">Services</a><br>
+                  <a href="#contacts" style="color: white;">Contacts</a><br>
                </p>
             </div>
             <div class="col-xl-2 col-md-8 offset-md-1 col-sm-12 ">
