--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
             <div class="col" style="text-align: center;">
                <h2 class="pb-3 pt-3" style="color: black;">Get in touch</h2>
                <p class="py-5" style="color: black;">Need to get in touch with us? Hit the contact us button</p>
-               <button class="glass-button" onclick="location.href='mailto:info@expert17.co'">Contact Us</button>
+               <button class="retro-button" onclick="location.href='mailto:info@expert17.co'">Contact Us</button>
          </div>
          </div>
          </div>
