--- a/index.html
+++ b/index.html
@@ -254,12 +254,12 @@
          </div>
       </center>
 
-      <section class="pt-5 py-5 wow fadeInUp" data-wow-delay="0.2s" style="background-color: white;">
+      <section class="pt-3 py-4 wow fadeInUp" data-wow-delay="0.2s" style="background-color: white;">
          <div class="container">
          <div class="row align-items-center justify-content-center">
             <div class="col" style="text-align: center;">
                <h2 class="pb-3 pt-3" style="color: black;">Get in touch</h2>
-               <p class="py-5" style="color: black;">Need to get in touch with us? Hit the contact us button</p>
+               <p class="py-4 pt-4" style="color: black;">Need to get in touch with us? Hit the contact us button</p>
                <button class="retro-button" onclick="location.href='mailto:info@expert17.co'">Contact Us</button>
          </div>
          </div>
