--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                            <li> <a href="#about">About</a></li>
                            <!-- <li> <a href="story.html">Story</a></li> -->
                            <li> <a href="#services">Services</a></li>
-                           <li> <a href="#contact">Contacts</a></li>
+                           <li> <a href="#contacts">Contacts</a></li>
                         </ul>
                      </nav>
                   </div>
@@ -254,7 +254,7 @@
          </div>
       </center>
 
-      <section class="pt-3 py-4 wow fadeInUp" data-wow-delay="0.2s" style="background-color: white;">
+      <section class="pt-3 py-4 wow fadeInUp" id="contacts" data-wow-delay="0.2s" style="background-color: white;">
          <div class="container">
          <div class="row align-items-center justify-content-center">
             <div class="col" style="text-align: center;">
