--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
          <div class="container">
             <div class="row">
                         <div class="col-md-12 mr-auto">
-                           <p class="text-muted">We are committed to protecting your privacy. Our website complies with the Protection of Personal Information Act (POPIA). To learn more about how we collect, use, and protect your data, please see our <a href="https://www.axxess.co.za/docs?tab=terms#tc-2" style="color: white;" target="_blank">Privacy Policy</a>.</p>
+                           <p class="text-muted">We are committed to protecting your privacy. Our website complies with the Protection of Personal Information Act (POPIA). To learn more about how we collect, use, and protect your data, please see our <a href="https://www.axxess.co.za/docs?tab=terms#tc-2" style="color: white; font-size: 16px;" target="_blank">Privacy Policy</a>.</p>
                         </div>
                </div>
             </div>
